Created Main section layout + spelling mistake fix

--- a/index.html
+++ b/index.html
@@ -53,12 +53,26 @@
         Pets allowed
       </button>
     </div>
-    <p class="info-txt"><i class="fas fa-info-circle info-btn"></i>More than 500 accomodations are available in this
+    <p class="info-txt"><i class="fas fa-info-circle info-btn"></i>More than 500 accommodations are available in this
       city</p>
   </div>
-  <div class="wrapper">
-    <div class="accomodations-section"></div>
-    <div class="side-bar"></div>
+  <div class="main">
+    <div class="accommodations-section">
+      <div class="accommodation-cards">
+        <h1>Accommodations in Marseille</h1>
+        <div class="card-1"></div>
+        <div class="card-2"></div>
+        <div class="card-4"></div>
+        <div class="card-5"></div>
+        <div class="card-6"></div>
+      </div>
+    </div>
+    <div class="side-bar">
+      <h1>Most Popular</h1>
+      <div class="card-7"></div>
+      <div class="card-8"></div>
+      <div class="card-9"></div>
+    </div>
   </div>
   </div>
   <div class="footer-container">
@@ -70,7 +84,7 @@
         <a href="#" style="text-decoration: none;" class="footer-links">Data and Privacy</a>
       </div>
       <div class="footer-list">
-        <h2>Our Accomodations</h2>
+        <h2>Our Accommodations</h2>
         <a href="#" style="text-decoration: none;" class="footer-links">Quality Assessment</a>
         <a href="#" style="text-decoration: none;" class="footer-links">You have a hotel?</a>
       </div>
