Activities in Marseille section added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,40 @@
       <div class="card-9"></div>
     </div>
   </div>
+  <div class="activities-section">
+    <div class="card-container">
+      <h1>Activities in Marseille</h1>
+      <div class="card">
+        <img src="#" />
+        <p>Card 1</p>
+      </div>
+      <div class="card-split">
+        <div class="card">
+          <img src="#" />
+          <p>Card 2</p>
+        </div>
+        <div class="card">
+          <img src="#" />
+          <p>Card 3</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="#" />
+        <p>Card 4</p>
+      </div>
+      <div class="card-split">
+
+        <div class="card">
+          <img src="#" />
+          <p>Card 5</p>
+        </div>
+        <div class="card">
+          <img src="#" />
+          <p>Card 6</p>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
   <div class="footer-container">
     <div class="footer">
