--- a/index.html
+++ b/index.html
@@ -34,75 +34,132 @@
     </div>
   </div>
   <div class="filter-section">
-    <div class="btn-group-filter">
+    <div class="filter-btn">
       <p class="filters">Filters</p>
-      <button class="button-filter-1">
-        <i class="fas fa-money-bill-wave fa-lg flt-btn"></i>
-        Low cost
-      </button>
-      <button class="button-filter-2">
-        <i class="fas fa-child fa-lg flt-btn"></i>
-        Family-friendly
-      </button>
-      <button class="button-filter-3">
-        <i class="fas fa-heart fa-lg flt-btn"></i>
-        Romantic
-      </button>
-      <button class="button-filter-4">
-        <i class="fas fa-dog fa-lg flt-btn"></i>
-        Pets allowed
-      </button>
+      <div class="my-button">
+        <div class="btn">
+          <i class="fa-solid fa-money-bill-wave"></i>
+        </div>
+        <span class="filter-name">Low cost</span>
+      </div>
+      <div class="my-button">
+        <div class="btn">
+          <i class="fas fa-child fa-lg"></i>
+        </div>
+        <span class="filter-name">Family-friendly</span>
+      </div>
+      <div class="my-button">
+        <div class="btn">
+          <i class="fas fa-heart fa-lg"></i>
+        </div>
+        <span class="filter-name">Romantic</span>
+      </div>
+      <div class="my-button">
+        <div class="btn">
+          <i class="fas fa-dog fa-lg"></i>
+        </div>
+        <span class="filter-name">Pets allowed</span>
+      </div>
     </div>
     <p class="info-txt"><i class="fas fa-info-circle info-btn"></i>More than 500 accommodations are available in this
       city</p>
   </div>
   <div class="main">
     <div class="accommodations-section">
-      <div class="accommodation-cards">
-        <h1>Accommodations in Marseille</h1>
-        <div class="card-1"></div>
-        <div class="card-2"></div>
-        <div class="card-4"></div>
-        <div class="card-5"></div>
-        <div class="card-6"></div>
+      <div class="accommodations-cards">
+        <div class="main-title">
+          <h1>Accommodations in Marseille</h1>
+        </div>
+        <div class="main-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="main-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="main-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="main-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="main-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="main-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
       </div>
-    </div>
-    <div class="side-bar">
-      <h1>Most Popular</h1>
-      <div class="card-7"></div>
-      <div class="card-8"></div>
-      <div class="card-9"></div>
+      <div class="side-bar">
+        <div class="sidebar-title">
+          <h1>Popular</h1><span><i class="fa-solid fa-star"></i></span>
+        </div>
+        <div class="sidebar-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="sidebar-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+        <div class="sidebar-card">
+          <img src="" alt="">
+          <h3>Title</h3>
+          <p>card-info</p>
+          <i>rating</i>
+        </div>
+      </div>
     </div>
   </div>
   <div class="activities-section">
+    <h1>Activities in Marseille</h1>
     <div class="card-container">
-      <h1>Activities in Marseille</h1>
       <div class="card">
-        <img src="#" />
+        <img src="#" alt="">
         <p>Card 1</p>
       </div>
       <div class="card-split">
         <div class="card">
-          <img src="#" />
+          <img src="#" alt="">
           <p>Card 2</p>
         </div>
         <div class="card">
-          <img src="#" />
+          <img src="#" alt="">
           <p>Card 3</p>
         </div>
       </div>
       <div class="card">
-        <img src="#" />
+        <img src="#" alt="">
         <p>Card 4</p>
       </div>
       <div class="card-split">
-
         <div class="card">
-          <img src="#" />
+          <img src="#" alt="">
           <p>Card 5</p>
         </div>
         <div class="card">
-          <img src="#" />
+          <img src="#" alt="">
           <p>Card 6</p>
         </div>
       </div>
