--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           <p>card-info</p>
           <i>rating</i>
         </div>
+        <div class="show-more">
+          <p>Show more</p>
+        </div>
       </div>
       <div class="side-bar">
         <div class="sidebar-title">
