--- a/index.html
+++ b/index.html
@@ -72,38 +72,38 @@
         </div>
         <div class="main-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Auberge la Canebière</h3>
+          <p>Night starting at 25€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Hôtel du Port</h3>
+          <p>Night starting at 52€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Les mouettes Hotel</h3>
+          <p>Night starting at 76€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Hôtel de la Mer</h3>
+          <p>Night starting at 46€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Auberge Le Panier</h3>
+          <p>Night starting at 23€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Hôtel chez Amina</h3>
+          <p>Night starting at 96€</p>
           <i>rating</i>
         </div>
         <div class="show-more">
@@ -112,24 +112,25 @@
       </div>
       <div class="side-bar">
         <div class="sidebar-title">
-          <h1>Popular</h1><span><i class="fa-solid fa-star"></i></span>
+          <h1>Most popular</h1>
+          <i class="fa-solid fa-star"></i>
         </div>
         <div class="sidebar-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Morning Sun Hotel</h3>
+          <p>Night starting at 128€</p>
           <i>rating</i>
         </div>
         <div class="sidebar-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Au coeur de l'eau Bed and Breakfast</h3>
+          <p>Night starting at 71€</p>
           <i>rating</i>
         </div>
         <div class="sidebar-card">
           <img src="" alt="">
-          <h3>Title</h3>
-          <p>card-info</p>
+          <h3>Tout bleu et Blanc Hotel</h3>
+          <p>Night starting at 68€</p>
           <i>rating</i>
         </div>
       </div>
@@ -140,30 +141,30 @@
     <div class="card-container">
       <div class="card">
         <img src="#" alt="">
-        <p>Card 1</p>
+        <p>Old Port</p>
       </div>
       <div class="card-split">
         <div class="card">
           <img src="#" alt="">
-          <p>Card 2</p>
+          <p>Pomègues Fort</p>
         </div>
         <div class="card">
           <img src="#" alt="">
-          <p>Card 3</p>
+          <p>Frioul Island</p>
         </div>
       </div>
       <div class="card">
         <img src="#" alt="">
-        <p>Card 4</p>
+        <p>Calanques National Park</p>
       </div>
       <div class="card-split">
         <div class="card">
           <img src="#" alt="">
-          <p>Card 5</p>
+          <p>Notre-Dame-de-la-Garde</p>
         </div>
         <div class="card">
           <img src="#" alt="">
-          <p>Card 6</p>
+          <p>Longchamp Park</p>
         </div>
       </div>
     </div>
