--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="header">
     <div class="logo" alt="logo">
-      <img class="logo-booki" src="assets/DW P2 - Ressources Booki FR/images/logo/Booki.png" alt="" />
+      <img class="logo-booki" src="assets/images/logo/Booki.png" alt="" />
     </div>
     <div class="nav">
       <a class="nav-links" href="#" style="text-decoration: none;">Accomodations</a>
@@ -44,19 +44,19 @@
       </div>
       <div class="my-button">
         <div class="btn">
-          <i class="fas fa-child fa-lg"></i>
+          <i class="fas fa-child fa-lg square"></i>
         </div>
         <span class="filter-name">Family-friendly</span>
       </div>
       <div class="my-button">
         <div class="btn">
-          <i class="fas fa-heart fa-lg"></i>
+          <i class="fas fa-heart fa-lg square"></i>
         </div>
         <span class="filter-name">Romantic</span>
       </div>
       <div class="my-button">
         <div class="btn">
-          <i class="fas fa-dog fa-lg"></i>
+          <i class="fas fa-dog fa-lg square"></i>
         </div>
         <span class="filter-name">Pets allowed</span>
       </div>
@@ -71,37 +71,37 @@
           <h1>Accommodations in Marseille</h1>
         </div>
         <div class="main-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="300" height="190" alt="">
           <h3>Auberge la Canebière</h3>
           <p>Night starting at 25€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="300" height="190" alt="">
           <h3>Hôtel du Port</h3>
           <p>Night starting at 52€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="300" height="190" alt="">
           <h3>Les mouettes Hotel</h3>
           <p>Night starting at 76€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="300" height="190" alt="">
           <h3>Hôtel de la Mer</h3>
           <p>Night starting at 46€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="300" height="190" alt="">
           <h3>Auberge Le Panier</h3>
           <p>Night starting at 23€</p>
           <i>rating</i>
         </div>
         <div class="main-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="300" height="190" alt="">
           <h3>Hôtel chez Amina</h3>
           <p>Night starting at 96€</p>
           <i>rating</i>
@@ -116,19 +116,19 @@
           <i class="fa-solid fa-star"></i>
         </div>
         <div class="sidebar-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" width="170" height="190" alt="">
           <h3>Morning Sun Hotel</h3>
           <p>Night starting at 128€</p>
           <i>rating</i>
         </div>
         <div class="sidebar-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" width="170" height="190" alt="">
           <h3>Au coeur de l'eau Bed and Breakfast</h3>
           <p>Night starting at 71€</p>
           <i>rating</i>
         </div>
         <div class="sidebar-card">
-          <img src="" alt="">
+          <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="170" height="190" alt="">
           <h3>Tout bleu et Blanc Hotel</h3>
           <p>Night starting at 68€</p>
           <i>rating</i>
@@ -140,30 +140,30 @@
     <h1>Activities in Marseille</h1>
     <div class="card-container">
       <div class="card">
-        <img src="#" alt="">
+        <img src="assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" width="170" height="380" alt="">
         <p>Old Port</p>
       </div>
       <div class="card-split">
         <div class="card">
-          <img src="#" alt="">
+          <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" width="170" height="190" alt="">
           <p>Pomègues Fort</p>
         </div>
         <div class="card">
-          <img src="#" alt="">
+          <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" width="170" height="190" alt="">
           <p>Frioul Island</p>
         </div>
       </div>
       <div class="card">
-        <img src="#" alt="">
+        <img src="assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" width="170" height="380" alt="">
         <p>Calanques National Park</p>
       </div>
       <div class="card-split">
         <div class="card">
-          <img src="#" alt="">
+          <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" width="170" height="190" alt="">
           <p>Notre-Dame-de-la-Garde</p>
         </div>
         <div class="card">
-          <img src="#" alt="">
+          <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" width="170" height="190" alt="">
           <p>Longchamp Park</p>
         </div>
       </div>
