--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <a class="nav-links" href="#" style="text-decoration: none;">Activities</a>
     </div>
   </div>
+
+
+
   <div class="search-section">
     <h1>Find a place for your dream vacation</h1>
     <h3>Downtown or in nature</h3>
@@ -36,34 +39,45 @@
   <div class="filter-section">
     <div class="filter-btn">
       <p class="filters">Filters</p>
-      <div class="my-button">
-        <div class="btn">
-          <i class="fa-solid fa-money-bill-wave"></i>
+      <a href="#" style="text-decoration: none; color: black;">
+        <div class="my-button">
+          <div class="btn">
+            <i class="fa-solid fa-money-bill-wave"></i>
+          </div>
+          <span class="filter-name">Low cost</span>
         </div>
-        <span class="filter-name">Low cost</span>
-      </div>
-      <div class="my-button">
-        <div class="btn">
-          <i class="fas fa-child fa-lg square"></i>
+      </a>
+      <a href="#" style="text-decoration: none; color: black;">
+        <div class="my-button">
+          <div class="btn">
+            <i class="fas fa-child fa-lg square"></i>
+          </div>
+          <span class="filter-name">Family-friendly</span>
         </div>
-        <span class="filter-name">Family-friendly</span>
-      </div>
-      <div class="my-button">
-        <div class="btn">
-          <i class="fas fa-heart fa-lg square"></i>
+      </a>
+      <a href="#" style="text-decoration: none; color: black;">
+        <div class="my-button">
+          <div class="btn">
+            <i class="fas fa-heart fa-lg square"></i>
+          </div>
+          <span class="filter-name">Romantic</span>
         </div>
-        <span class="filter-name">Romantic</span>
-      </div>
-      <div class="my-button">
-        <div class="btn">
-          <i class="fas fa-dog fa-lg square"></i>
+      </a>
+      <a href="#" style="text-decoration: none; color: black;">
+        <div class="my-button">
+          <div class="btn">
+            <i class="fas fa-dog fa-lg square"></i>
+          </div>
+          <span class="filter-name">Pets allowed</span>
         </div>
-        <span class="filter-name">Pets allowed</span>
-      </div>
+      </a>
     </div>
     <p class="info-txt"><i class="fas fa-info-circle info-btn"></i>More than 500 accommodations are available in this
       city</p>
   </div>
+
+
+
   <div class="main">
     <div class="accommodations-section">
       <div class="accommodations-cards">
@@ -71,71 +85,113 @@
           <h1>Accommodations in Marseille</h1>
         </div>
         <div class="main-card">
-          <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="300" height="190" alt="">
-          <h3>Auberge la Canebière</h3>
-          <p>Night starting at 25€</p>
-          <i>rating</i>
+          <div class="main-card-img">
+            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%" height="50%" alt="">
+          </div>
+          <div class="main-card-txt">
+            <h3>Auberge la Canebière</h3>
+            <p>Night starting at 25€</p>
+            <i>rating</i>
+          <div class="side-card-txt"></div></div>
         </div>
         <div class="main-card">
-          <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="300" height="190" alt="">
-          <h3>Hôtel du Port</h3>
-          <p>Night starting at 52€</p>
-          <i>rating</i>
+          <div class="main-card-img">
+            <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="main-card-txt">
+            <h3>Hôtel du Port</h3>
+            <p>Night starting at 52€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="main-card">
-          <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="300" height="190" alt="">
-          <h3>Les mouettes Hotel</h3>
-          <p>Night starting at 76€</p>
-          <i>rating</i>
+          <div class="main-card-img">
+            <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="main-card-txt">
+            <h3>Les mouettes Hotel</h3>
+            <p>Night starting at 76€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="main-card">
-          <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="300" height="190" alt="">
-          <h3>Hôtel de la Mer</h3>
-          <p>Night starting at 46€</p>
-          <i>rating</i>
+          <div class="main-card-img">
+            <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="main-card-txt">
+            <h3>Hôtel de la Mer</h3>
+            <p>Night starting at 46€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="main-card">
-          <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="300" height="190" alt="">
-          <h3>Auberge Le Panier</h3>
-          <p>Night starting at 23€</p>
-          <i>rating</i>
+          <div class="main-card-img">
+            <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="main-card-txt">
+            <h3>Auberge Le Panier</h3>
+            <p>Night starting at 23€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="main-card">
-          <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="300" height="190" alt="">
-          <h3>Hôtel chez Amina</h3>
-          <p>Night starting at 96€</p>
-          <i>rating</i>
+          <div class="main-card-img">
+            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="main-card-txt">
+            <h3>Hôtel chez Amina</h3>
+            <p>Night starting at 96€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="show-more">
           <p>Show more</p>
         </div>
       </div>
+
+
+
       <div class="side-bar">
         <div class="sidebar-title">
           <h1>Most popular</h1>
           <i class="fa-solid fa-star"></i>
         </div>
         <div class="sidebar-card">
-          <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" width="170" height="190" alt="">
-          <h3>Morning Sun Hotel</h3>
-          <p>Night starting at 128€</p>
-          <i>rating</i>
+          <div class="sidebar-card-img">
+            <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="side-card-txt">
+            <h3>Morning Sun Hotel</h3>
+            <p>Night starting at 128€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="sidebar-card">
-          <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" width="170" height="190" alt="">
-          <h3>Au coeur de l'eau Bed and Breakfast</h3>
-          <p>Night starting at 71€</p>
-          <i>rating</i>
+          <div class="sidebar-card-img">
+            <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="side-card-txt">
+            <h3>Au coeur de l'eau Bed and Breakfast</h3>
+            <p>Night starting at 71€</p>
+            <i>rating</i>
+          </div>
         </div>
         <div class="sidebar-card">
-          <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="170" height="190" alt="">
-          <h3>Tout bleu et Blanc Hotel</h3>
-          <p>Night starting at 68€</p>
-          <i>rating</i>
+          <div class="sidebar-card-img">
+            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%" height="auto" alt="">
+          </div>
+          <div class="side-card-txt">
+            <h3>Tout bleu et Blanc Hotel</h3>
+            <p>Night starting at 68€</p>
+            <i>rating</i>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+
+
   <div class="activities-section">
     <h1>Activities in Marseille</h1>
     <div class="card-container">
@@ -170,6 +226,9 @@
     </div>
   </div>
   </div>
+
+
+
   <div class="footer-container">
     <div class="footer">
       <div class="footer-list">
