--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%" height="50%" alt="">
+            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%" height="auto" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Auberge la Canebière</h3>
