NAV <a> tags linked to page sections

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <img class="logo-booki" src="assets/images/logo/Booki.png" alt="" />
     </div>
     <div class="nav">
-      <a class="nav-links" href="#" style="text-decoration: none;">Accomodations</a>
-      <a class="nav-links" href="#" style="text-decoration: none;">Activities</a>
+      <a class="nav-links" href="#accommodations-section" style="text-decoration: none;">Accomodations</a>
+      <a class="nav-links" href="#activities-section" style="text-decoration: none;">Activities</a>
     </div>
   </div>
 
@@ -79,7 +79,7 @@
 
 
   <div class="main">
-    <div class="accommodations-section">
+    <div class="accommodations-section" id="accommodations-section">
       <div class="accommodations-cards">
         <div class="main-title">
           <h1>Accommodations in Marseille</h1>
@@ -192,7 +192,7 @@
 
 
 
-  <div class="activities-section">
+  <div class="activities-section" id="activities-section">
     <h1>Activities in Marseille</h1>
     <div class="card-container">
       <div class="card">
