Added hover effect to filter buttons

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </a>
     </div>
-    <p class="info-txt"><i class="fas fa-info-circle info-btn" style="color: #0065FC;"></i>More than 500 accommodations are available in this
+    <p class="info-txt"><i class="fas fa-info-circle info-btn"></i>More than 500 accommodations are available in this
       city</p>
   </div>
 
