--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h3>Auberge la Canebière</h3>
             <p>Night starting at 25€</p>
             <i>rating</i>
-          <div class="side-card-txt"></div></div>
+          </div>
         </div>
         <div class="main-card">
           <div class="main-card-img">
