--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </a>
     </div>
-    <p class="info-txt"><i class="fas fa-info-circle info-btn"></i>More than 500 accommodations are available in this
+    <p class="info-txt"><i class="fas fa- max-height=-circle info-btn"></i>More than 500 accommodations are available in this
       city</p>
   </div>
 
@@ -86,7 +86,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Auberge la Canebière</h3>
@@ -96,7 +96,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="100%" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Hôtel du Port</h3>
@@ -106,7 +106,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="100%" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Les mouettes Hotel</h3>
@@ -116,7 +116,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="100%" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Hôtel de la Mer</h3>
@@ -126,7 +126,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="100%" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Auberge Le Panier</h3>
@@ -136,7 +136,7 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Hôtel chez Amina</h3>
