--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         </div>
       </a>
     </div>
-    <p class="info-txt"><i class="fas fa- max-height=-circle info-btn"></i>More than 500 accommodations are available in this
+    <p class="info-txt"><i class="fas fa- max-height=-circle info-btn"></i>More than 500 accommodations are available in
+      this
       city</p>
   </div>
 
@@ -86,7 +87,8 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" width="100%"
+              style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Auberge la Canebière</h3>
@@ -96,7 +98,8 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" width="100%"
+              style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Hôtel du Port</h3>
@@ -106,7 +109,8 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" width="100%"
+              style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Les mouettes Hotel</h3>
@@ -116,7 +120,8 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" width="100%"
+              style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Hôtel de la Mer</h3>
@@ -126,7 +131,8 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" width="100%"
+              style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Auberge Le Panier</h3>
@@ -136,7 +142,8 @@
         </div>
         <div class="main-card">
           <div class="main-card-img">
-            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%" max-height="147.33px" style="border-radius: 20px 20px 0 0;" alt="">
+            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%"
+              style="border-radius: 20px 20px 0 0;" alt="">
           </div>
           <div class="main-card-txt">
             <h3>Hôtel chez Amina</h3>
@@ -158,7 +165,8 @@
         </div>
         <div class="sidebar-card">
           <div class="sidebar-card-img">
-            <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" width="100%" style="border-radius: 20px 0 0 20px;" alt="">
+            <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" width="100%"
+              style="border-radius: 20px 0 0 20px;" alt="">
           </div>
           <div class="side-card-txt">
             <h3>Morning Sun Hotel</h3>
@@ -168,7 +176,8 @@
         </div>
         <div class="sidebar-card">
           <div class="sidebar-card-img">
-            <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" width="100%" style="border-radius: 20px 0 0 20px;" alt="">
+            <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" width="100%"
+              style="border-radius: 20px 0 0 20px;" alt="">
           </div>
           <div class="side-card-txt">
             <h3>Au coeur de l'eau Bed and Breakfast</h3>
@@ -178,7 +187,8 @@
         </div>
         <div class="sidebar-card">
           <div class="sidebar-card-img">
-            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%" style="border-radius: 20px 0 0 20px;" alt="">
+            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" width="100%"
+              style="border-radius: 20px 0 0 20px;" alt="">
           </div>
           <div class="side-card-txt">
             <h3>Tout bleu et Blanc Hotel</h3>
@@ -196,30 +206,36 @@
     <h1>Activities in Marseille</h1>
     <div class="card-container">
       <div class="card">
-        <img src="assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" width="170" height="380" style="border-radius: 20px 20px 0 0;" alt="">
+        <img src="assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" width="170" height="380"
+          style="border-radius: 20px 20px 0 0;" alt="">
         <p>Old Port</p>
       </div>
       <div class="card-split">
         <div class="card">
-          <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" width="170" height="190" style="border-radius: 20px 20px 0 0;" alt="">
+          <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" width="170" height="190"
+            style="border-radius: 20px 20px 0 0;" alt="">
           <p>Pomègues Fort</p>
         </div>
         <div class="card">
-          <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" width="170" height="190" style="border-radius: 20px 20px 0 0;" alt="">
+          <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" width="170" height="190"
+            style="border-radius: 20px 20px 0 0;" alt="">
           <p>Frioul Island</p>
         </div>
       </div>
       <div class="card">
-        <img src="assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" width="170" height="380" style="border-radius: 20px 20px 0 0;" alt="">
+        <img src="assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" width="170" height="380"
+          style="border-radius: 20px 20px 0 0;" alt="">
         <p>Calanques National Park</p>
       </div>
       <div class="card-split">
         <div class="card">
-          <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" width="170" height="190" style="border-radius: 20px 20px 0 0;" alt="">
+          <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" width="170" height="190"
+            style="border-radius: 20px 20px 0 0;" alt="">
           <p>Notre-Dame-de-la-Garde</p>
         </div>
         <div class="card">
-          <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" width="170" height="190" style="border-radius: 20px 20px 0 0;" alt="">
+          <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" width="170" height="190"
+            style="border-radius: 20px 20px 0 0;" alt="">
           <p>Longchamp Park</p>
         </div>
       </div>
