Changing main section with new html structure

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </a>
     </div>
-    <p class="info-txt"><i class="fas fa- max-height=-circle info-btn"></i>More than 500 accommodations are available in
+    <p class="info-txt"><i class="fa-solid fa-circle-info info-btn"></i>More than 500 accommodations are available in
       this
       city</p>
   </div>
